<resources>
    <string name="action_settings">Settings</string>
    <string-array name="headers">
        <item>Extra</item>
    </string-array>
    <string name="input_date">Date</string>
    <string name="input_time">Time</string>
    <string name="input_sugar">Sugar</string>
    <string name="input_extra">Extra</string>
    <string name="dateTimeFormat">yyyy MM/dd hh:mm</string>
    <string name="dateFormat">yyyy MM/dd</string>
    <string name="timeFormat">hh:mm</string>
    <string name="creation_dialog_button_add_close">Add and close</string>
    <string name="creation_dialog_button_close">Close</string>
    <string name="creation_dialog_button_add">Add</string>
    <string name="number_picker_separator_comma">.</string>
    <string name="decimal_point">.</string>
    <string name="number_picker_ok_button">Apply</string>
    <string name="number_picker_clear_button">Clear</string>
    <string name="edit_dialog_button_update">update</string>
    <string name="number_picker_sugar_level">Sugar Level</string>
    <string name="action_colors">Color Settings</string>
    <string name="action_switch_theme">Switch Theme</string>
    <string name="action_export_db">Export db</string>
    <string name="action_import_db">Import db</string>
    <string name="theme_picker_dialog_title">Pick a color theme</string>
    <string name="edit_dialog_button_delete">Delete</string>
    <string name="number_picker_cancel_button">@android:string/cancel</string>
    <string name="show_stats">Show Statistics</string>
    <string name="stat_window_title">Statistics</string>
    <string name="stat_window_bs_entries">Blood sugar entries</string>
    <string name="stat_window_avg_bs">Avg blood sugar level: %1$.2f</string>
    <string name="stat_window_bs_entries_30">Blood sugar entries last 30 days</string>
    <string name="stat_window_avg_bs_30">Avg blood sugar level last 30 days: %1$.2f</string>
    <string name="stat_window_no_bs">No sugar levels!</string>
    <string name="stat_window_header_total_bs">In Total:</string>
    <string name="stat_window_header_total_bs_30">Last 30 days:</string>
    <string name="show_graphs">History Graph</string>
    <string name="action_merge_db" >Merge db</string>
    <string name="sugar_entry_delete_confirmation">Are you sure you want to delete this entry?</string>
    <string name="show_bar_graphs">Show week summary</string>
    <string name="dependent_bar_line_graph_header">Weekly stats</string>
    <string name="input_weight">Weight</string>
    <string name="show_weight_summary">Show weight summary</string>
    <string name="input_food">Food</string>
    <string name="input_treatment">Insulin</string>
    <string name="input_drink">Drink</string>
    <string name="show_hide_icons">show/hide icons</string>
    <string name="title_activity_color_editor">Color Editor</string>
    <string name="input_treatment_pills">Other treatment</string>
    <string name="input_start_date">Start</string>
    <string name="input_end_date">End</string>
    <string name="EntryCreatorSleepString">Sleep</string>
    <string name="week_average_description">⟨W⟩</string>
    <!--<string name="week_sum_description">∑W</string>-->
    <string name="week_sum_description">&#120506;W</string>
    <string name="input_category">Category</string>
    <string name="convert_extra_to_category">Convert extra to category</string>
</resources>