<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="stobix.app.lifetracker.MainActivity">
    <!--
    <item
        android:id="@+id/action_colors"
        android:title="@string/action_colors" />
        -->
    <item
        android:id="@+id/action_switch_theme"
        android:title="@string/action_switch_theme" />
    <group >
        <item
            android:id="@+id/show_stats"
            android:title="@string/show_stats" />
        <item
            android:id="@+id/show_graphs"
            android:title="@string/show_graphs" />
        <item
            android:id="@+id/show_sugar_weekly"
            android:title="@string/show_bar_graphs"
            android:icon="@drawable/bar_chart_icon"
            app:showAsAction="ifRoom" />
    </group>
    <group >
        <item
            android:id="@+id/action_import_db"
            android:title="@string/action_import_db" />
        <item
            android:id="@+id/action_merge_db"
            android:title="@string/action_merge_db" />
        <item
            android:id="@+id/action_export_db"
            android:title="@string/action_export_db" />
    </group>
    <item
        android:id="@+id/action_toggle_list_icons"
        android:checkable="true"
        android:title="@string/show_hide_icons" />
    <!--
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
        -->
</menu>
