<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.stobix.myapplication.MainActivity"
    tools:showIn="@layout/activity_main">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="48dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toTopOf="@+id/tableView"
        app:layout_constraintEnd_toStartOf="@+id/editText2"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@mipmap/ic_launcher_foreground" />
    <!--
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        /> -->

    <EditText
        android:id="@+id/editText2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/input_date"
        android:imeOptions="actionNext"
        android:inputType="datetime"
        android:onClick="showNosePickerDialog"
        android:singleLine="true"

        android:visibility="visible"

        app:layout_constraintBottom_toTopOf="@+id/tableView"
        app:layout_constraintEnd_toStartOf="@+id/editText3"

        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:hint="@string/input_sugar"
        android:imeOptions="actionNext"
        android:inputType="textPersonName|numberDecimal"
        android:visibility="visible"

        app:layout_constraintBottom_toTopOf="@+id/tableView"
        app:layout_constraintEnd_toStartOf="@+id/editText4"

        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/editText2" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/input_extra"
        android:imeOptions="actionDone"
        android:inputType="textPersonName"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/tableView"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"

        app:layout_constraintStart_toEndOf="@+id/editText3" />

    <com.example.stobix.myapplication.SortableLolFnissTableView
        android:id="@+id/tableView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        app:tableView_columnCount="4"
        tools:layout_editor_absoluteX="0dp" />


</android.support.constraint.ConstraintLayout>
